add endpoint cadastrar_pessoa
